laskentakaavaeditorin tiedostohierarkia refaktoroitu

--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -37,6 +37,7 @@
     <script type="text/javascript" src="../js/jarjestyskriteeri.js"></script>
     <script type="text/javascript" src="../js/organisaatio.js"></script>
     <script type="text/javascript" src="../js/directives.js"></script>
+    <script type="text/javascript" src="../js/modal.js"></script>
     <script type="text/javascript" src="../js/haku.js"></script>
     <script type="text/javascript" src="../js/filters.js"></script>
     <script type="text/javascript" src="../js/auth.js"></script>
@@ -44,13 +45,15 @@
 
     <script type="text/javascript" src="../js/laskentakaavat/laskentakaavaeditor.js"></script>
     <script type="text/javascript" src="../js/laskentakaavat/laskentakaavaresources.js"></script>
-    <script type="text/javascript" src="../js/laskentakaavat/laskentakaavamenu.js"></script>
-    <script type="text/javascript" src="../js/laskentakaavat/laskentakaavalista.js"></script>
-    <script type="text/javascript" src="../js/laskentakaavat/laskentakaava.js"></script>
-    <script type="text/javascript" src="../js/laskentakaavat/laskentakaavapuu.js"></script>
-    <script type="text/javascript" src="../js/laskentakaavat/laskentakaavadirectives.js"></script>
+    <script type="text/javascript" src="../js/laskentakaavat/funktioasetukset.js"></script>
+    <script type="text/javascript" src="../js/laskentakaavat/listaus/laskentakaavalista.js"></script>
+    <script type="text/javascript" src="../js/laskentakaavat/laskentakaavapuu/laskentakaavaController.js"></script>
+    <script type="text/javascript" src="../js/laskentakaavat/laskentakaavapuu/funktioServices.js"></script>
+    <script type="text/javascript" src="../js/laskentakaavat/laskentakaavapuu/laskentakaavadirectives.js"></script>
+    <script type="text/javascript" src="../js/laskentakaavat/laskentakaavapuu/funktioFactory.js"></script>
+    <script type="text/javascript" src="../js/laskentakaavat/laskentakaavapuu/templateService.js"></script>
 
-    <script type="text/javascript" src="../js/laskentakaavat/hakukohdelaskentakaavalista.js"></script>
+    <script type="text/javascript" src="../js/laskentakaavat/listaus/hakukohdelaskentakaavalista.js"></script>
     <script type="text/javascript" src="../js/valintaryhmavalinnanvaihe.js"></script>
     <script type="text/javascript" src="../js/loading.js"></script>
     <script type="text/javascript" src="../js/valintakoe.js"></script>
