jquery i18n mukaan valintaperusteisiin

--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -15,9 +15,7 @@
     <script type="text/javascript" src="../jslib/static/jquery.nestable.js"></script>
     <script type="text/javascript" src="../jslib/static/jquery.mjs.nestedSortable.js"></script>
     <script type="text/javascript" src="../jslib/ui-bootstrap-tpls.min.js"></script>
-
-    <script type="text/javascript" src="../jslib/jquery-2.1.0/jquery.i18n.properties-min-1.0.9.min.js"></script>
-
+    <script type="text/javascript" src="../jslib/jquery.i18n.properties.js"></script>
 
     <!--conf -->
     <script type="text/javascript"  src="../configuration/configuration.js"></script>
