button-tyylien korjauksia

--- a/src/main/webapp/app/hakijaryhma/hakijaryhma.html
+++ b/src/main/webapp/app/hakijaryhma/hakijaryhma.html
@@ -90,9 +90,9 @@
     </div>
 
 
-    <button class="button small float-left margin-right-2" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Takaisin
+    <button class="btn btn-sm btn-default float-left margin-right-2" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Takaisin
     </button>
-    <button auth="update" ng-disabled="!form.$valid" class="button small primary" type="submit">
+    <button auth="update" ng-disabled="!form.$valid" class="btn btn-sm btn-primary" type="submit">
         <div ng-show="!model.hakijaryhma.oid"><i class="fa fa-floppy-o"></i>
             Lisää
         </div>
