--- a/src/main/webapp/app/valinnanvaihe/valinnanvaihelomake.html
+++ b/src/main/webapp/app/valinnanvaihe/valinnanvaihelomake.html
@@ -88,20 +88,25 @@
                     </td>
                     <td>{{'valintaperusteet.periytyy.' + jono.inheritance | i18n}}</td>
                     <td class="align-center">
-                        <span auth="crud" ng-show="!jono.inheritance" class="btn remove" ng-click="model.remove(jono)"></span>
+                        <span auth="crud" ng-show="!jono.inheritance" class="btn remove"
+                              ng-click="model.remove(jono)"></span>
                     </td>
                 </tr>
                 </tbody>
             </table>
-            <span auth="crud" class="button small" ng-click="addJono()"><i class="fa fa-plus"></i> Jono</span>
+            <span auth="crud" class="btn btn-sm btn-default" ng-click="addJono()"><i class="fa fa-plus"></i> Jono</span>
         </div>
     </div>
     <div class="clear"></div>
 
-
-    <button auth="update" ng-disabled="!form.$valid" class="button small primary" type="submit"><i class="fa fa-floppy-o"></i>
+    <span>
+    <button auth="update" ng-disabled="!form.$valid" class="btn btn-sm btn-primary" type="submit"><i
+            class="fa fa-floppy-o"></i>
         Tallenna
     </button>
-    <button class="button small float-left margin-right-1" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Takaisin
-    </button>
+        </span>
+    <span>
+    <button class="btn btn-sm btn-default float-left margin-right-1" ng-click="cancel()"><i
+            class="fa fa-arrow-left"></i> Takaisin
+    </button></span>
 </form>
