--- a/src/main/webapp/app/yhteisvalinnanhallinta/yhteisvalinnanhallinta.html
+++ b/src/main/webapp/app/yhteisvalinnanhallinta/yhteisvalinnanhallinta.html
@@ -11,7 +11,7 @@
 
     <div>
         <select ng-model="model.hakuOid" ng-options="haku.nimi.kieli_fi for haku in model.haut | orderBy:'nimi.kieli_fi'"></select>
-        <a auth="crudOph" ng-click="aktivoi()" class="button small">Synkronoi tarjonta</a>
+        <a auth="crudOph" ng-click="aktivoi()" class="btn btn-primary btn-sm">Synkronoi tarjonta</a>
     </div>
 
 </div>
