--- a/src/main/webapp/app/hakijaryhma/hakijaryhma.html
+++ b/src/main/webapp/app/hakijaryhma/hakijaryhma.html
@@ -89,8 +89,8 @@
         <div class="clear"></div>
     </div>
 
-
-    <button class="btn btn-sm btn-default float-left margin-right-2" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Takaisin
+<div class="col-sm-2">
+    <button class="btn btn-sm btn-default" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Takaisin
     </button>
     <button auth="update" ng-disabled="!form.$valid" class="btn btn-sm btn-primary" type="submit">
         <div ng-show="!model.hakijaryhma.oid"><i class="fa fa-floppy-o"></i>
@@ -100,6 +100,6 @@
             Muokkaa
         </div>
     </button>
-
+</div>
 
 </form>
