--- a/src/main/webapp/app/valintaryhma/valintaryhmalomake_uusi.html
+++ b/src/main/webapp/app/valintaryhma/valintaryhmalomake_uusi.html
@@ -71,9 +71,9 @@
             <div class="clear"></div>
         </div>
 
-        <div class="grid16-16">
+        <div class="col-sm-2">
+            <button type="button" class="btn btn-sm btn-default" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Takaisin</button>
             <button auth="crud" ng-disabled="!form.$valid" class="btn btn-sm btn-primary" type="submit"><i class="fa fa-floppy-o"></i> Tallenna</button>
-            <button type="button" class="btn btn-sm btn-primary" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Takaisin</button>
         </div>
         <div class="clear"></div>
     </form>
