vt-830: lokalisointi, modal ja loading commoniin

--- a/src/main/webapp/app/index.html
+++ b/src/main/webapp/app/index.html
@@ -36,11 +36,11 @@
     <script type="text/javascript" src="jarjestyskriteeri/jarjestyskriteeri.js"></script>
     <script type="text/javascript" src="organisaatio.js"></script>
     <script type="text/javascript" src="../common/js/directives.js"></script>
-    <script type="text/javascript" src="../common/js/directives/modal.js"></script>
+    <script type="text/javascript" src="../common/js/modal.js"></script>
     <script type="text/javascript" src="../common/js/filters.js"></script>
     <script type="text/javascript" src="../common/js/auth.js"></script>
 
-    <script type="text/javascript" src="localization.js"></script>
+    <script type="text/javascript" src="../common/js/localization.js"></script>
 
 
     <script type="text/javascript" src="laskentakaavat/laskentakaavaeditor.js"></script>
@@ -55,7 +55,7 @@
     <script type="text/javascript" src="laskentakaavat/listaus/hakukohdelaskentakaavalista.js"></script>
 
     <script type="text/javascript" src="valinnanvaihe/valintaryhmavalinnanvaihe.js"></script>
-    <script type="text/javascript" src="loading.js"></script>
+    <script type="text/javascript" src="../common/js/loading.js"></script>
     <script type="text/javascript" src="valintakoe/valintakoe.js"></script>
     <script type="text/javascript" src="yhteisvalinnanhallinta/yhteisvalinnanhallinta.js"></script>
 
