--- a/src/main/webapp/app/valintaryhma/valintaryhmalomake.html
+++ b/src/main/webapp/app/valintaryhma/valintaryhmalomake.html
@@ -2,11 +2,15 @@
 
 
 <div class="tabs">
-    <a href="#/valintaryhma/{{model.valintaryhma.oid}}/" class="tab current"><span>Valintaryhmän perustiedot</span></a>
+    <a href="#/etusivu" class="tab current"><span>Valintaryhmät ja hakukohteet</span></a>
     <a ng-show="model.valintaryhma.oid" href="#/valintaryhma/{{model.valintaryhma.oid}}/laskentakaava"
-       class="tab"><span>Laskentakaavat</span></a>
+       class="tab"><span>Laskentakaavat</span></a>,
+    <a auth="crudOph" href="#/import" class="tab float-right"><span>Yhteisvalinnan hallinta</span></a>
+
 </div>
+
 <div class="tabsheets">
+
 
 <form name="form" ng-submit="submit()">
 
@@ -24,8 +28,6 @@
 
     <div class="form-row-content">
         <span class="nofield">{{model.valintaryhma.oid}}</span>
-        <!--    <input type="text" ng-model="valintaryhma.oid" disabled />
-           <input type="text" name="" id="" ng-model="valintaryhma.oid" />     -->
     </div>
     <div class="clear"></div>
 </div>
