vt-831: alustavaa toteutusta

--- a/src/main/webapp/app/valinnanvaihe/valinnanvaihelomake.html
+++ b/src/main/webapp/app/valinnanvaihe/valinnanvaihelomake.html
@@ -1,5 +1,6 @@
 ﻿<h1>Valinnanvaiheen muokkaus</h1>
 
+<breadcrumb></breadcrumb>
 <form name="form" ng-submit="submit()">
     <!--
     <div class="form-row">
