--- a/src/main/webapp/app/valintaryhmalistaus/valintaryhmatlistaus.html
+++ b/src/main/webapp/app/valintaryhmalistaus/valintaryhmatlistaus.html
@@ -35,6 +35,8 @@
 </div>
 
 <div class="tabsheets">
+    <breadcrumb></breadcrumb>
+
     <div class="search">
         <div class="margin-top-1">
             <a auth="crud" href="#/valintaryhma/" class="margin-right-1 btn btn-sm btn-default"> <i class="fa fa-plus"></i> {{'valintaryhmatlistaus.add.valintaryhma' | i18n}}</a>
