--- a/src/main/webapp/app/index.html
+++ b/src/main/webapp/app/index.html
@@ -12,6 +12,7 @@
     <script type="text/javascript" src="../common/jslib/angular-resource.min.js"></script>
     <script type="text/javascript" src="../common/jslib/angular-route.min.js"></script>
     <script type="text/javascript" src="../common/jslib/angular-animate.min.js"></script>
+    <script type="text/javascript" src="../common/jslib/ng-breadcrumbs.js"></script>
     <script type="text/javascript" src="../common/jslib/static/jquery.nestable.js"></script>
     <script type="text/javascript" src="../common/jslib/static/jquery.mjs.nestedSortable.js"></script>
     <script type="text/javascript" src="../common/jslib/ui-bootstrap-tpls.min.js"></script>
@@ -76,7 +77,7 @@
 <body>
 
     <div id="application-wrapper">
-        <div id="angularbox" ng-view=""></div>        
+        <div id="angularbox" ng-view="" ng-controller="mainCtrl"></div>
     </div>
 
 
