--- a/src/main/webapp/app/valintatapajono/valintatapajono.html
+++ b/src/main/webapp/app/valintatapajono/valintatapajono.html
@@ -1,5 +1,7 @@
 ﻿<h1>{{'jononmuokkaus.header' | i18n}}</h1>
 
+<breadcrumb></breadcrumb>
+
 <form name="form" ng-submit="submit()" class="valintatapajono">
 <div class="form-row">
     <label class="form-row-label" for="nimi">Jonon nimi</label>
