vt-831: laskentakaavojen avaamisessa bugi korjattu

--- a/src/main/webapp/app/laskentakaavat/laskentakaavapuu/laskentakaavalomake.html
+++ b/src/main/webapp/app/laskentakaavat/laskentakaavapuu/laskentakaavalomake.html
@@ -2,10 +2,10 @@
 <h1>Laskentakaavan muokkaus</h1>
 
 
-<div class="tabs" ng-controller="LaskentakaavaMenuController">
-    <a ng-repeat="menuitem in menuitems" href="{{menuitem.url}}" ng-class="cssClass(menuitem)">
-        <span>{{menuitem.title}}</span>
-    </a>
+<div class="tabs">
+    <a href="#/etusivu" class="tab"><span>Valintaryhmät ja hakukohteet</span></a>
+    <a href="#/laskentakaava" class="tab current"><span>Laskentakaavat</span></a>
+    <a auth="crudOph" href="#/import" class="tab float-right"><span>Yhteisvalinnan hallinta</span></a>
 </div>
 
 <div class="tabsheets">
@@ -19,10 +19,10 @@
     </div>
 
     <!-- Laskentakaavapuu -->
-    <div ng-include="'laskentakaava/laskentakaavapuu/laskentakaavapuu.html'"></div>
+    <div ng-include="'laskentakaavat/laskentakaavapuu/laskentakaavapuu.html'"></div>
 
     <!-- Laskentakaavan tai funktion asetukset -->
-    <div ng-include="'laskentakaava/laskentakaavapuu/funktioasetukset.html'"></div>
+    <div ng-include="'laskentakaavat/laskentakaavapuu/funktioasetukset.html'"></div>
 
     <div class="clear"></div>
 </div>
