--- a/src/main/webapp/app/valintatapajono/hakijaryhmaValintatapajono.html
+++ b/src/main/webapp/app/valintatapajono/hakijaryhmaValintatapajono.html
@@ -1,5 +1,12 @@
 ﻿<h1>Hakijaryhman liittäminen</h1>
 
+<div class="tabs">
+    <a href="#/etusivu" class="tab current"><span>Valintaryhmät ja hakukohteet</span></a>
+    <a href="#/laskentakaava" class="tab"><span>Laskentakaavat</span></a>
+    <a auth="crudOph" href="#/import" class="tab float-right"><span>Yhteisvalinnan hallinta</span></a>
+</div>
+
+        <div class="tabsheet">
 <form name="form" ng-submit="submit()">
 
 
@@ -44,3 +51,4 @@
         <button class="button small float-left margin-right-2" ng-click="cancel()">Takaisin</button>
     </div>
 </form>
+        </div>
