--- a/src/main/webapp/app/laskentakaavat/listaus/laskentakaavalista.html
+++ b/src/main/webapp/app/laskentakaavat/listaus/laskentakaavalista.html
@@ -80,7 +80,7 @@
                     <tbody>
                     <tr ng-repeat="kaava in valintaryhma.laskentakaavat">
                         <td>
-                            <a ng-href="#{{linkprefix}}/laskentakaava/{{kaava.id}}">{{kaava.nimi}}</a>
+                            <a ng-href="#/valintaryhma/{{valintaryhmaOid}}/laskentakaava/{{kaava.id}}">{{kaava.nimi}}</a>
                         </td>
                         <td>
                             {{kaava.kuvaus}}
