--- a/src/main/webapp/app/valinnanvaihe/valinnanvaihelomake.html
+++ b/src/main/webapp/app/valinnanvaihe/valinnanvaihelomake.html
@@ -1,104 +1,113 @@
 ﻿<h1>Valinnanvaiheen muokkaus</h1>
+<div class="tabs">
+    <a href="#/etusivu" class="tab current"><span>Valintaryhmät ja hakukohteet</span></a>
+    <a href="#/laskentakaava" class="tab"><span>Laskentakaavat</span></a>
+    <a auth="crudOph" href="#/import" class="tab float-right"><span>Yhteisvalinnan hallinta</span></a>
+</div>
 
-<breadcrumb></breadcrumb>
-<form name="form" ng-submit="submit()">
-    <!--
-    <div class="form-row">
-        <label class="form-row-label" for="">Valinnan vaihe</label>
+<div class="tabsheets">
 
-        <div class="form-row-content">
-            <select ng-model="vaihe.tyyppi">
-                <option>Esivalinta</option>
-                <option>Varsinainen valinta</option>
-                <option>Täydennysvalinta</option>
-                <option>Lisävalinta</option>
-            </select>
-            <br/>
-            <div><small>Valinnan vaiheen tyyppiin liittyvä ohjeteksti.</small></div>
-        </div>
-        <div class="clear"></div>
-    </div>
-    -->
+    <breadcrumb></breadcrumb>
+    <form name="form" ng-submit="submit()">
+        <!--
+        <div class="form-row">
+            <label class="form-row-label" for="">Valinnan vaihe</label>
 
-
-    <div class="form-row" ng-show="model.valinnanvaihe.kuuluuSijoitteluun">
-        <div class="form-row-label">Kuuluu sijoitteluun</div>
-        <div class="form-row-content">
-            {{model.valinnanvaihe.kuuluuSijoitteluun}}
-        </div>
-        <div class="clear"></div>
-    </div>
-
-    <div class="form-row">
-        <label class="form-row-label" for="nimi">Nimi</label>
-
-        <div class="form-row-content">
-            <input name="nimi" ng-model="model.valinnanvaihe.nimi" required/>
-        </div>
-
-        <div class="clear"></div>
-
-        <label class="form-row-label" for="kuvaus">Kuvaus</label>
-
-        <div class="form-row-content">
-            <textarea name="kuvaus" ng-model="model.valinnanvaihe.kuvaus"/>
-        </div>
-    </div>
-    <!--
-    <div class="form-row">
-        <label class="form-row-label" for="kuvaus">Kuvaus</label>
-
-        <div class="form-row-content">
-            <input name="nimi" ng-model="valinnanvaihe.nimi" >
-            <textarea name="kuvaus"  ng-model="valinnanvaihe.kuvaus" /></textarea>
-
-            <div class="field-container-checkbox">
-                <input type="checkbox" name="kvvs" ng-model="valinnanvaihe.sijoittelu" id="kvvs" value="" />
-                <label for="kvvs">Käytetään valinnan vaihekohtaista sijoittelua</label><br/>
+            <div class="form-row-content">
+                <select ng-model="vaihe.tyyppi">
+                    <option>Esivalinta</option>
+                    <option>Varsinainen valinta</option>
+                    <option>Täydennysvalinta</option>
+                    <option>Lisävalinta</option>
+                </select>
+                <br/>
+                <div><small>Valinnan vaiheen tyyppiin liittyvä ohjeteksti.</small></div>
             </div>
-            <div class="field-container-checkbox">
-                <input type="checkbox" name="vvor" ng-model="valinnanvaihe.rajaava" id="vvor" value="" />
-                <label for="vvor">Valinnan vaihe on rajaava</label><br/>
+            <div class="clear"></div>
+        </div>
+        -->
+
+
+        <div class="form-row" ng-show="model.valinnanvaihe.kuuluuSijoitteluun">
+            <div class="form-row-label">Kuuluu sijoitteluun</div>
+            <div class="form-row-content">
+                {{model.valinnanvaihe.kuuluuSijoitteluun}}
+            </div>
+            <div class="clear"></div>
+        </div>
+
+        <div class="form-row">
+            <label class="form-row-label" for="nimi">Nimi</label>
+
+            <div class="form-row-content">
+                <input name="nimi" ng-model="model.valinnanvaihe.nimi" required/>
             </div>
 
+            <div class="clear"></div>
 
-         <div><small>Jotain ohjetekstiä.</small></div>
+            <label class="form-row-label" for="kuvaus">Kuvaus</label>
 
+            <div class="form-row-content">
+                <textarea name="kuvaus" ng-model="model.valinnanvaihe.kuvaus"/>
+            </div>
         </div>
-        <div class="clear"></div>
-    </div>
-             -->
-    <div class="form-row" ng-show="model.valinnanvaihe.oid">
-        <div class="form-row-label">Valintatapajonot</div>
+        <!--
+        <div class="form-row">
+            <label class="form-row-label" for="kuvaus">Kuvaus</label>
 
-        <div class="form-row-content">
-            <table class="virkailija-table-1 margin-bottom-2" ng-show="model.valintatapajonot">
-                <thead>
-                <tr>
-                    <th>Aktiivinen</th>
-                    <th>Nimi</th>
-                    <th>Periytyminen</th>
-                    <th>Poista</th>
-                </tr>
-                </thead>
-                <tbody ui-sortable ng-model="model.valintatapajonot" class="margin-top-2">
-                <tr ng-repeat="jono in model.valintatapajonot">
-                    <td><input type="checkbox" ng-model="jono.aktiivinen"/></td>
-                    <td>
-                        <a ng-class="{true:'', false:'line-through'}[jono.aktiivinen]" ng-click="modifyJono(jono.oid)">{{jono.nimi}}</a>
-                    </td>
-                    <td>{{'valintaperusteet.periytyy.' + jono.inheritance | i18n}}</td>
-                    <td class="align-center">
+            <div class="form-row-content">
+                <input name="nimi" ng-model="valinnanvaihe.nimi" >
+                <textarea name="kuvaus"  ng-model="valinnanvaihe.kuvaus" /></textarea>
+
+                <div class="field-container-checkbox">
+                    <input type="checkbox" name="kvvs" ng-model="valinnanvaihe.sijoittelu" id="kvvs" value="" />
+                    <label for="kvvs">Käytetään valinnan vaihekohtaista sijoittelua</label><br/>
+                </div>
+                <div class="field-container-checkbox">
+                    <input type="checkbox" name="vvor" ng-model="valinnanvaihe.rajaava" id="vvor" value="" />
+                    <label for="vvor">Valinnan vaihe on rajaava</label><br/>
+                </div>
+
+
+             <div><small>Jotain ohjetekstiä.</small></div>
+
+            </div>
+            <div class="clear"></div>
+        </div>
+                 -->
+        <div class="form-row" ng-show="model.valinnanvaihe.oid">
+            <div class="form-row-label">Valintatapajonot</div>
+
+            <div class="form-row-content">
+                <table class="virkailija-table-1 margin-bottom-2" ng-show="model.valintatapajonot">
+                    <thead>
+                    <tr>
+                        <th>Aktiivinen</th>
+                        <th>Nimi</th>
+                        <th>Periytyminen</th>
+                        <th>Poista</th>
+                    </tr>
+                    </thead>
+                    <tbody ui-sortable ng-model="model.valintatapajonot" class="margin-top-2">
+                    <tr ng-repeat="jono in model.valintatapajonot">
+                        <td><input type="checkbox" ng-model="jono.aktiivinen"/></td>
+                        <td>
+                            <a ng-class="{true:'', false:'line-through'}[jono.aktiivinen]"
+                               ng-click="modifyJono(jono.oid)">{{jono.nimi}}</a>
+                        </td>
+                        <td>{{'valintaperusteet.periytyy.' + jono.inheritance | i18n}}</td>
+                        <td class="align-center">
                         <span auth="crud" ng-show="!jono.inheritance" class="btn remove"
                               ng-click="model.remove(jono)"></span>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
-            <span auth="crud" class="btn btn-sm btn-default" ng-click="addJono()"><i class="fa fa-plus"></i> Jono</span>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+                <span auth="crud" class="btn btn-sm btn-default" ng-click="addJono()"><i
+                        class="fa fa-plus"></i> Jono</span>
+            </div>
         </div>
-    </div>
-    <div class="clear"></div>
+        <div class="clear"></div>
 
     <span>
     <button auth="update" ng-disabled="!form.$valid" class="btn btn-sm btn-primary" type="submit"><i
@@ -110,4 +119,6 @@
     <button class="btn btn-sm btn-default float-left margin-right-1" ng-click="cancel()"><i
             class="fa fa-arrow-left"></i> Takaisin
     </button></span>
-</form>
+    </form>
+    <div class="clear"></div>
+</div>
