--- a/src/main/webapp/app/valintatapajono/valintatapajono.html
+++ b/src/main/webapp/app/valintatapajono/valintatapajono.html
@@ -1,5 +1,12 @@
 ﻿<h1>{{'jononmuokkaus.header' | i18n}}</h1>
 
+<div class="tabs">
+    <a href="#/etusivu" class="tab current"><span>Valintaryhmät ja hakukohteet</span></a>
+    <a href="#/laskentakaava" class="tab"><span>Laskentakaavat</span></a>
+    <a auth="crudOph" href="#/import" class="tab float-right"><span>Yhteisvalinnan hallinta</span></a>
+</div>
+
+<div class="tabsheets">
 <breadcrumb></breadcrumb>
 
 <form name="form" ng-submit="submit()" class="valintatapajono">
@@ -100,7 +107,8 @@
             <div class="form-row-content">
                 <input type="checkbox" id="alkaenRajattu" name="alkaenRajattu"
                        ng-model="model.valintatapajono.alkaenRajattu">
-                <date-input ng-disabled="!model.valintatapajono.alkaenRajattu" name="varasijojaKaytetaanAlkaen" id="varasijojaKaytetaanAlkaen" ng-model="model.valintatapajono.varasijojaKaytetaanAlkaen"/>
+                <date-input ng-disabled="!model.valintatapajono.alkaenRajattu" name="varasijojaKaytetaanAlkaen"
+                            id="varasijojaKaytetaanAlkaen" ng-model="model.valintatapajono.varasijojaKaytetaanAlkaen"/>
             </div>
             <div class="clear"></div>
         </div>
@@ -111,7 +119,8 @@
             <div class="form-row-content">
                 <input type="checkbox" id="astiRajattu" name="astiRajattu"
                        ng-model="model.valintatapajono.astiRajattu">
-                <date-input ng-disabled="!model.valintatapajono.astiRajattu" name="varasijojaTaytetaanAsti" id="varasijojaTaytetaanAsti" ng-model="model.valintatapajono.varasijojaTaytetaanAsti"/>
+                <date-input ng-disabled="!model.valintatapajono.astiRajattu" name="varasijojaTaytetaanAsti"
+                            id="varasijojaTaytetaanAsti" ng-model="model.valintatapajono.varasijojaTaytetaanAsti"/>
             </div>
             <div class="clear"></div>
         </div>
@@ -183,7 +192,8 @@
                 <td>
                     <a ng-class="{true:'', false:'line-through'}[data.aktiivinen]"
                        ng-click="modifyKriteeri(data.oid)">{{data.nimi}}</a>
-                </td><td>
+                </td>
+                <td>
                     <a ng-class="{true:'', false:'line-through'}[data.aktiivinen]"
                        ng-click="modifyKriteeri(data.oid)">{{data.metatiedot}}</a>
                 </td>
@@ -193,7 +203,8 @@
             </tr>
             </tbody>
         </table>
-        <span auth="crud" class="button small" ng-click="addKriteeri()"><i class="fa fa-plus"></i> Kriteeri</span>
+        <span auth="crud" class="btn btn-sm btn-default" ng-click="addKriteeri()"><i
+                class="fa fa-plus"></i> Kriteeri</span>
         <!--<div><small>Jonojen muodostuskriteereihin liittyvä ohjeteksti.</small></div>-->
     </div>
     <span ng-show="!model.valintatapajono.oid">Tallenna jono lisätäksesi kriteeri.</span>
@@ -206,7 +217,8 @@
     <div class="form-row-content width-60" ng-if="!model.valintatapajono.siirretaanSijoitteluun">
         <span>Valintatapajonoa ei siirretä sijoitteluun. Hakijaryhma ei vaikuta jonoon.</span>
     </div>
-    <div class="form-row-content width-60" ng-if="model.valintatapajono.siirretaanSijoitteluun && model.valintatapajono.oid">
+    <div class="form-row-content width-60"
+         ng-if="model.valintatapajono.siirretaanSijoitteluun && model.valintatapajono.oid">
         <table ng-show="model.hakijaryhmat" class="virkailija-table-1 margin-bottom-2 width-60">
             <thead>
             <tr>
@@ -240,12 +252,13 @@
 </div>
 
 <div class="clear"></div>
-
-<button auth="update" ng-disabled="!form.$valid" class="button small primary" type="submit"><i
+<button class="btn btn-sm btn-default" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Takaisin
+</button>
+<button auth="update" ng-disabled="!form.$valid" class="btn btn-sm btn-primary" type="submit"><i
         class="fa fa-floppy-o"></i>
     Tallenna
 </button>
-<button class="button small float-left margin-right-1" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Takaisin
-</button>
+
 <div class="clear"></div>
 </form>
+</div>
