vt-831: murupolkutoteutusta puukotettu (murupolussa ei näytetä oideja)

--- a/src/main/webapp/app/laskentakaavat/listaus/laskentakaavalista.html
+++ b/src/main/webapp/app/laskentakaavat/listaus/laskentakaavalista.html
@@ -11,7 +11,7 @@
 
 <div class="tabsheets">
 
-
+    <breadcrumb></breadcrumb>
     <h2>Laskentakaavalista</h2>
     <span ng-click="createKaava()" class="btn btn-sm btn-default"><i class="fa fa-plus"></i> Laskentakaava</span>
 
