--- a/src/main/webapp/app/laskentakaavat/listaus/hakukohdelaskentakaavalista.html
+++ b/src/main/webapp/app/laskentakaavat/listaus/hakukohdelaskentakaavalista.html
@@ -12,7 +12,7 @@
 </div>
 
 <div class="tabsheets">
-    
+    <breadcrumb></breadcrumb>
     <h2>Laskentakaavalista</h2>
     
     <span ng-click="createKaava()" class="btn btn-default btn-sm"><i class="fa fa-plus"></i> Uusi laskentakaava</span>
